<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!--自定义标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:text="@string/call_log_fill_title"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

        <EditText
            android:id="@+id/add_calllognum_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:hint="@string/calllog_num_edit_text"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/CallLog_num_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text="@string/calllog_num_text_view"/>


        <Button
            android:id="@+id/AddCallLog"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_selector"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="270dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/addcalllog"/>

        <Button
            android:id="@+id/DeleteCallLog"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_selector"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="270dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/deletecalllog"/>
    </RelativeLayout>



</RelativeLayout>