<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!--自定义标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:src="@mipmap/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center_vertical"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/ram_fill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:text="@string/ram_fill_button"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/rom_fill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:text="@string/rom_fill_button"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/sms_fill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:text="@string/sms_fill_button"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/contact_fill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:text="@string/contact_fill_button"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/call_log_fill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:text="@string/call_log_fill_button"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"/>


    </LinearLayout>
</LinearLayout>
