<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:text="@string/rom_fill_title"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:text="@string/fill_size_name"/>

            <EditText
                android:id="@+id/size_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:hint="@string/edit_memory_size_name"
                android:maxLength="7"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:id="@+id/rom_all_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"
            tools:text="总ROM大小"/>

        <TextView
            android:id="@+id/rom_available_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"
            tools:text="可用ROM大小"/>


        <Button
            android:id="@+id/add_rom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_selector"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/fill_rom"/>

        <Button
            android:id="@+id/release_rom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/release_rom"/>

        <TextView
            android:id="@+id/sdcard_all_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"
            tools:text="总SDCard大小"/>

        <TextView
            android:id="@+id/sdcard_available_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"
            tools:text="可用SDCard大小"/>


        <Button
            android:id="@+id/add_sdcard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_selector"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/fill_sdcard"/>

        <Button
            android:id="@+id/release_sdcard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/release_sdcard"/>

    </LinearLayout>
</LinearLayout>
